<resources>
    <string name="app_name">Green Medic</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="action_settings">Settings</string>
    <string name="full_name">Full Name</string>
    <string name="appicon">appicon</string>
    <string name="password">Password</string>
    <string name="licence_no">Licence no</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="pharmacy_name">Pharmacy Name</string>
    <string name="email">Email</string>
    <string name="_0_0_0_0">0 0 0 0 0 0</string>
    <string name="enter_4_digit_code_sent_to_you">Enter 6 digit code sent to you</string>
    <string name="select_user_type">Select user type</string>
    <string name="pharmacy_store">Pharmacy Store</string>
    <string name="user">User</string>
    <string name="title_activity_pharm_main">Pharmacy Orders</string>
    <string name="total">Total + Delivery:</string>
    <string name="_00000">000000</string>
    <string name="ordered_medicine_list">Ordered Medicine List</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="accept">Accept</string>
    <string name="accepted_orders">Accepted Orders</string>
    <string name="open_orders">Open Orders</string>
    <string name="show_order_location">Order Location</string>
    <string name="title_activity_show_order_on_maps">Order Details</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="rating">3.5</string>
</resources>
